--- a/index.html
+++ b/index.html
@@ -2259,7 +2259,7 @@
 	</div>
 	<div class="every10">
     	<i class="iconfont icon-erweima2"></i>
-    	<img src="img/tianmao-erweima.png" alt="">
+    	<img src="img/er.png" alt="">
 	</div>
 	<div class="every11">
     	<i class="iconfont icon-TOP"></i>
